<resources>
    <string name="app_name">Xsolla Sample App</string>

    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="failure">Failure</string>
    <string name="save_changes">Save changes</string>
    <string name="update">Update</string>
    <string name="back">Back</string>

    <string name="login_tab">log in</string>
    <string name="sign_up_tab">sign up</string>
    <string name="username_input_hint">Username</string>
    <string name="email_input_hint">E-mail</string>
    <string name="password_input_hint">Password</string>
    <string name="password_confirm_input_hint">Confirm password</string>
    <string name="password_min_length_helper">Minimum length: 6 symbols</string>
    <string name="log_in_button">log in</string>
    <string name="log_in_as_demo_user">log in as demo user</string>
    <string name="sign_up_button">sign up</string>
    <string name="reset_password_button">reset password</string>
    <string name="log_in_with_google_button">log in with google</string>
    <string name="log_in_with_facebook_button">log in with facebook</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="go_to_store">Go to store</string>
    <string name="refresh">Refresh</string>
    <string name="privacy_policy">By continuing, you agree to be bound by our\n<u>Privacy Policy</u></string>
    <string name="purchased_placeholder">Purchased</string>

    <string name="dev_menu_title">Developer settings</string>
    <string name="dev_menu_oauth2_id">OAuth2 Client ID</string>
    <string name="dev_menu_login_id">Login ID</string>
    <string name="dev_menu_project_id">Project ID</string>
    <string name="dev_menu_webshop_url">WebShop URL</string>
    <string name="dev_menu_apply">Apply</string>
    <string name="dev_menu_reset">Reset to defaults</string>

    <string name="drawer_item_character">Character</string>
    <string name="drawer_item_inventory">My inventory</string>
    <string name="drawer_item_friends">My friends</string>
    <string name="drawer_item_store">Store</string>
    <string name="drawer_item_vi">Virtual items</string>
    <string name="drawer_item_vc">Virtual currency</string>
    <string name="drawer_item_merchandise">Merchandise</string>
    <string name="drawer_item_coupon">Redeem a coupon</string>
    <string name="drawer_item_webstore">Web Store</string>
    <string name="drawer_item_tutorial">Tutorial</string>
    <string name="drawer_item_account">Account</string>
    <string name="drawer_item_logout">Log out</string>

    <string name="inventory_placeholder">Your items appear here</string>

    <string name="friends_add_friends_button_text">+ ADD FRIENDS</string>
    <string name="friends_accept_friend_button">Accept</string>
    <string name="friends_decline_friend_button">Decline</string>
    <string name="friends_add_friend_button">Add friend</string>
    <string name="friends_unblock_friend_button">Unblock</string>
    <string name="friends_cancel_friend_button">Cancel request</string>
    <string name="friends_request_accepted_text">✓ Request accepted</string>
    <string name="friends_request_declined_text">× Request declined</string>
    <string name="friends_tab_placeholder">Your friends appear here</string>
    <string name="friends_pending_tab_placeholder">No pending friend requests</string>
    <string name="friends_requested_tab_placeholder">All sent requests appear here</string>
    <string name="friends_blocked_tab_placeholder">All blocked players appear here</string>

    <string name="friends_options_dialog_title">%s options</string>
    <string name="friends_option_block">Block user</string>
    <string name="friends_options_block_button">Block</string>
    <string name="friends_option_block_title">Block %s?</string>
    <string name="friends_option_delete">Delete friend</string>
    <string name="friends_options_delete_button">Remove</string>
    <string name="friends_option_delete_title">Remove %s from the friends list?</string>

    <string name="add_friends_title">Add friends</string>
    <string name="add_friends_search_hint">Search by nickname</string>
    <string name="add_friends_social_accounts">Social accounts</string>
    <string name="add_friends_recommended">Recommended</string>
    <string name="add_friends_linking_error">Linking error</string>
    <string name="add_friends_recent_search">Recent search</string>
    <string name="add_friends_friends_in_placeholder">Friends on</string>
    <string name="add_friends_social_empty">Link social networks to show friends recommendations</string>
    <string name="add_friends_search_empty">No users have been found</string>

    <string name="profile_title">Account</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_nickname_hint">Nickname</string>
    <string name="profile_phone_hint">Phone number</string>
    <string name="profile_firstname_hint">First name</string>
    <string name="profile_lastname_hint">Last name</string>
    <string name="profile_birthday_hint">Date of birth</string>
    <string name="profile_gender_hint">Gender</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_fields_were_changed">Fields were successfully changed</string>
    <string name="profile_phone_validation">Phone must start with "+" and contains 5..25 digits</string>
    <string name="profile_text_field_validation">%s length must be less than 255 symbols</string>
    <string name="profile_letter_was_sent">A letter has been sent to the %s. Follow the link in the letter — and you can create a new password</string>
    <string name="avatar_remove_button">Remove avatar</string>

    <string name="character_title">Character</string>
    <string name="character_tab1">Read-only attributes</string>
    <string name="character_tab2">User-editable attributes</string>
    <string name="character_lvl_up">\tLevel up for 200</string>
    <string name="character_lvl">%d lvl</string>
    <string name="character_1lvl">1 lvl</string>
    <string name="character_read_only_attributes_footer">See the documentation to learn more about read-only attributes.</string>
    <string name="character_read_only_attributes_placeholder">No attributes set. See the documentation to learn more about read-only attributes.</string>
    <string name="character_editable_attributes_placeholder">No attributes set</string>
    <string name="character_editable_attributes_footer">Add attribute</string>
    <string name="character_edit_attribute_title">Custom attribute</string>
    <string name="character_edit_attribute_save_button">Save changes</string>
    <string name="character_edit_attribute_remove_button">Remove attribute</string>
    <string name="character_edit_attribute_discard_button">Discard changes</string>
    <string name="character_edit_attribute_key_hint">Attribute key</string>
    <string name="character_edit_attribute_value_hint">Attribute value</string>

    <string name="coupon_title">Redeem coupon</string>
    <string name="coupon_hint">Enter your coupon code</string>
    <string name="coupon_redeem_button">Redeem</string>
    <string name="coupon_example">\tfor example, WINTER2021</string>
    <string name="coupon_received_items_placeholder">You received the following items:</string>
    <string name="coupon_redeem_another_button">Redeem another coupon</string>
    <string name="coupon_received_item_exp_period">Expiration in: %d %ss</string>
    
    <string name="login_more_login_options">More login options</string>
    <string name="login_description_header">You can place these buttons instead of "More login options" button.</string>
    <string name="login_description_footer" formatted="false">Username/password and "Log in with email" authorization options are only shown together
        for purposes of demonstration.
        Availability of authorization options depends on Login project settings in Xsolla Publisher Account.</string>
    <string name="login_as_demo_user">Log in as demo user</string>
    <string name="login_with_device_id">Log in with device id</string>
    <string name="login_with_phone">Log in with phone</string>
    <string name="login_passworless_auth">Log in with email</string>
    <string name="login_phone_input_hint">Enter your phone</string>
    <string name="login_email_input_hint">Enter your email</string>
    <string name="login_send_code_button">Send code</string>
    <string name="login_back_button">Back</string>
    <string name="login_code_from_sms">Enter code from SMS</string>
    <string name="login_code_from_email">Enter code from Email</string>
    <string name="login_log_in">Log in</string>
    <string name="login_code_expired_in">Code expires in:</string>
    <string name="login_code_timer">%02d:%02d.</string>
    <string name="login_code_expired">Code expired.</string>
    <string name="login_resend_code">Resend code?</string>
    <string name="login_description" >Restrictions: \n
        1. The confirmation code is valid for 3 minutes. \n
           \u0009\u0009 After 3 minutes, you will need to request a new \n
           \u0009\u0009 confirmation code. \n
        2. If you fail to submit the correct confirmation \n
           \u0009\u0009 code 3 times, the code becomes invalid. \n
        3. You can\'t request a confirmation code more \n
           \u0009\u0009 than 3 times per minute. </string>
    <string name="promocode_hint">Enter your promocode here</string>
    <string name="promocode_placeholder">\tfor example, NEWGAMER2020</string>
    <string name="promocode_bonus_item_placeholder">BONUS ITEM</string>

    <string name="buy_again">Buy again</string>
    <string name="buy_now_button">Buy now</string>
    <string name="preview">Preview</string>

    <string name="payment_completed">Payment completed</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="payment_unknown">Payment error</string>

</resources>
