<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimarySurface"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/dev_menu_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/login_activity_padding"
        android:paddingEnd="@dimen/login_activity_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/dev_menu_oauth2_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oauth2Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/dev_menu_login_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/dev_menu_project_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/projectId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/dev_menu_webshop_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webshopUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/applyButton"
            style="@style/Widget.Xsolla.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dev_menu_apply" />

        <Button
            android:id="@+id/resetButton"
            style="@style/Widget.Xsolla.ActionButton.Small.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/action_button_height"
            android:text="@string/dev_menu_reset" />

    </LinearLayout>

</LinearLayout>