<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Widget.Xsolla.Fragment.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_item_inventory" />

        <Button
            android:id="@+id/refreshButton"
            style="@style/Widget.Xsolla.ActionButton.Small.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:text="@string/refresh" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noItemsPlaceholder"
        style="?attr/textAppearanceHeadline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/inventory_placeholder"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goToStoreButton"
        style="@style/Widget.Xsolla.ActionButton.Small.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/inventory_fragment_go_to_store_margin_horizontal"
        android:layout_marginTop="@dimen/inventory_fragment_go_to_store_margin_vertical"
        android:layout_marginEnd="@dimen/inventory_fragment_go_to_store_margin_horizontal"
        android:layout_marginBottom="@dimen/inventory_fragment_go_to_store_margin_vertical"
        android:text="@string/go_to_store" />

</LinearLayout>