<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".ui.fragments.store.RedeemCouponFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_white_close_24"
        app:title="@string/coupon_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/receivedItemsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="successPlaceholder,itemsPlaceholder,receivedItemsRecycler,redeemAnotherLayout" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/couponGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="couponLayout,redeemButton,cancelButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/couponLayout"
        style="@style/Widget.Xsolla.TextInputLayoutFilled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/coupon_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:placeholderText="@string/coupon_example">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/couponInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/redeemButton"
        style="@style/Widget.Xsolla.ActionButton.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:text="@string/coupon_redeem_button"
        app:layout_constraintEnd_toEndOf="@id/couponLayout"
        app:layout_constraintTop_toBottomOf="@id/couponLayout" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.Xsolla.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/redeemButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/redeemButton" />

    <TextView
        android:id="@+id/successPlaceholder"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/success"
        android:textColor="@color/white_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/itemsPlaceholder"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/coupon_received_items_placeholder"
        android:textColor="@color/secondary_color"
        app:layout_constraintStart_toStartOf="@id/successPlaceholder"
        app:layout_constraintTop_toBottomOf="@id/successPlaceholder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/receivedItemsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/redeemAnotherLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemsPlaceholder"
        tools:listitem="@layout/item_inventory" />

    <FrameLayout
        android:id="@+id/redeemAnotherLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/secondary_color_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/redeemAnotherButton"
            style="@style/Widget.Xsolla.ActionButton.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/coupon_redeem_another_button" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>