<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconProfile"
            style="@style/Widget.Xsolla.Drawer.Icon.Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawer_profile_icon_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textUsername"
                style="@style/Widget.Xsolla.Drawer.Text.Username"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/drawer_name_line_height"
                tools:text="Usikpusik" />

            <TextView
                android:id="@+id/textEmail"
                style="@style/Widget.Xsolla.Drawer.Text.Email"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/drawer_email_line_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconProfile"
                app:layout_constraintTop_toBottomOf="@+id/textUsername"
                tools:text="a.nikonova@xsolla.com" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/profileLine"
        style="@style/Widget.Xsolla.Drawer.View.Line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconProfile" />

    <com.xsolla.android.inventorysdkexample.ui.view.DrawerItem
        android:id="@+id/itemInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_inventory"
        app:item_text="@string/drawer_item_inventory" />

    <com.xsolla.android.inventorysdkexample.ui.view.DrawerItem
        android:id="@+id/itemRedeemCoupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_redeem_coupon"
        app:item_text="@string/drawer_item_coupon" />

    <com.xsolla.android.inventorysdkexample.ui.view.DrawerItem
        android:id="@+id/itemWebStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_webstore"
        app:item_text="@string/drawer_item_webstore" />

    <com.xsolla.android.inventorysdkexample.ui.view.DrawerItem
        android:id="@+id/itemTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_tutorial"
        app:item_text="@string/drawer_item_tutorial" />

    <com.xsolla.android.inventorysdkexample.ui.view.DrawerItem
        android:id="@+id/itemLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_logout"
        app:item_text="@string/drawer_item_logout" />

</LinearLayout>